--- a/index.html
+++ b/index.html
@@ -7,7 +7,21 @@
   <title>Title </title>
   <link rel="stylesheet" href="main.css">
 </head>
+
 <body>
+
+  <header>
+
+  </header>
+
+  <main>
+
+  </main>
+
   
+  <footer>
+
+  </footer>   
+
 </body>
 </html>
