--- a/index.html
+++ b/index.html
@@ -11,13 +11,12 @@
 <body>
 
   <header>
-    <nav class="menu">
-      <ul>
-        <li class="logo"> <a href="#">Header Logo</a></li>
+    <nav>
+      <ul class="menu">
+        <li class="logo"><a href="#">Header Logo</a></li>
         <li class="item"><a href="#">LinkONE</a></li>
         <li class="item"><a href="#">LinkTWO</a></li>
         <li class="item"><a href="#">LinkTHREE</a></li>
-
       </ul>
     </nav>
   </header>
