--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <header>
     <nav>
-      <ul class="menu">
+      <ul class="nav-list">
         <li class="logo"><a href="#">Header Logo</a></li>
         <li class="item"><a href="#">LinkONE</a></li>
         <li class="item"><a href="#">LinkTWO</a></li>
