--- a/index.html
+++ b/index.html
@@ -10,25 +10,62 @@
 
 <body>
 
-  <header>
-    <nav>
-      <ul class="nav-list">
-        <li class="logo"><a href="#">Header Logo</a></li>
-        <li class="item"><a href="#">LinkONE</a></li>
-        <li class="item"><a href="#">LinkTWO</a></li>
-        <li class="item"><a href="#">LinkTHREE</a></li>
-      </ul>
-    </nav>
-  </header>
 
-  <main>
+<div class="top"> <!-- top section start -->
 
-  </main>
+<div class="nav-section"> <!-- nav section start   -->
+
+<div class="logo">
+logo
+</div>
+<div>
+  <ul class="nav-items">
+    <li><a href="#linkone">header link one</a></li>
+    <li><a href="#linktwo">header link two</a></li>
+    <li><a href="#linkthree">header link three</a></li>
+  </ul>
+</div>
+
+</div> <!-- nav section end -->
+
+<div class="hero">
+<div class="hero-text">
+<div class="hero-text-main">
+  This Website Is Awesome
+</div>
+<div class="hero-text-secondary">
+  This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.
+</div>
+<div class="hero-button">
+  <button>Sign Up</button>
+</div>
+</div>
+<div class="hero-image">
+</div>
+</div>  
+
+</div> <!-- top section end -->
+
+<main>
+<div> <!-- info grid section with images start -->
+
+</div><!-- info grid section with images end -->
+
+<div> <!-- quote section start -->
 
 
-  <footer>
+</div> <!-- quote section end -->
 
-  </footer>   
+<div> <!-- call to action start -->
+
+
+</div> <!-- call to action end -->
+</main>
+
+
+<footer>
+<!-- copyright nobody the nothing project 2929 -->
+</footer>   
 
 </body>
 </html>
