--- a/index.html
+++ b/index.html
@@ -51,10 +51,17 @@ logo
 <div class="info-grid"> <!-- info grid section with images start -->
 
 <div class="info-images"><img src="https://images.pexels.com/photos/160583/capybara-group-eat-meadow-160583.jpeg" alt="" width="200">
+  <p>this is some subtext under an illustration or image</p>
 </div>
-<div class="info-images"><img src="https://images.pexels.com/photos/7725648/pexels-photo-7725648.jpeg" alt="" width="200"></div>
-<div class="info-images"><img src="https://images.pexels.com/photos/6596764/pexels-photo-6596764.jpeg" alt="" width="200" height="150"></div>
-<div class="info-images"><img src="https://images.pexels.com/photos/11092354/pexels-photo-11092354.jpeg" alt="" width="200" height="150"></div>
+<div class="info-images"><img src="https://images.pexels.com/photos/7725648/pexels-photo-7725648.jpeg" alt="" width="200">
+  <p>this is some subtext under an illustration or image</p>
+</div>
+<div class="info-images"><img src="https://images.pexels.com/photos/6596764/pexels-photo-6596764.jpeg" alt="" width="200" height="150">
+  <p>this is some subtext under an illustration or image</p>
+</div>
+<div class="info-images"><img src="https://images.pexels.com/photos/11092354/pexels-photo-11092354.jpeg" alt="" width="200" height="150">
+  <p>this is some subtext under an illustration or image</p>
+</div>
 </div><!-- info grid section with images end -->
 
 <div> <!-- quote section start -->
