--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
 <body>
 
 
-<div class="top"> <!-- top section start -->
+<div class="top">
 
-<div class="nav-section"> <!-- nav section start   -->
+<div class="nav-section">
 
 <div class="logo">
 logo
 </div>
+
 <div>
   <ul class="nav-items">
     <li><a href="#linkone">header link one</a></li>
@@ -26,7 +27,7 @@ logo
   </ul>
 </div>
 
-</div> <!-- nav section end -->
+</div>
 
 <div class="hero">
 <div class="hero-text">
@@ -64,20 +65,30 @@ logo
 </div>
 </div><!-- info grid section with images end -->
 
-<div> <!-- quote section start -->
-
-
+<div class="quote-section"> <!-- quote section start -->
+  <div>
+    For 60 years, WWF has worked to help people and nature thrive. As the world's leading conservation organization, WWF works in nearly 100 countries. At every level, we collaborate with people around the world to develop and deliver innovative solutions that protect communities, wildlife, and the places in which they live.
+  </div>
 </div> <!-- quote section end -->
+<div class="rest-of-content">
 
-<div> <!-- call to action start -->
-
-
+<div class="cta-container">
+<div class="cta"> <!-- call to action start -->
+<div class="cta-text">
+<div class="cta-text-one">Call to action! It's time!</div>
+<div class="cta-text-two">
+  Sign up for our products by clicking that button right over there!
+</div>
+</div>
+<div class="cta-button"><button>Sign up</button></div>
 </div> <!-- call to action end -->
+</div>
+</div>
 </main>
 
 
 <footer>
-<!-- copyright nobody the nothing project 2929 -->
+copyright nobody the nothing project 2929
 </footer>   
 
 </body>
