add quote attribution

--- a/index.html
+++ b/index.html
@@ -67,8 +67,11 @@ logo
 
 <div class="quote-section"> <!-- quote section start -->
   <div>
-    For 60 years, WWF has worked to help people and nature thrive. As the world's leading conservation organization, WWF works in nearly 100 countries. At every level, we collaborate with people around the world to develop and deliver innovative solutions that protect communities, wildlife, and the places in which they live.
+    You thought the beaver was a rodent of unusual size? The capybara is twice that big—the biggest rodent on Earth. These impressive semi-aquatic mammals are found throughout much of northern and central South America, though a small invasive population has been seen in Florida. They’re closely related to guinea pigs and rock cavies, and more distantly related to chinchillas and agouti.
+    <div class="citation"><cite>-National Geographic</cite></div>
+
   </div>
+
 </div> <!-- quote section end -->
 <div class="rest-of-content">
 
